--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,9 @@ jobs:
 
     - name: Build
       run: CI=false npm run build
+      
+    - name: Copy CNAME file
+      run: cp CNAME build/
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4
